@@ -1,0 +1,62 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2008 Dmitry Dulepov <dmitry@typo3.org>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+/**
+ * [CLASS/FUNCTION INDEX of SCRIPT]
+ *
+ * Hint: use extdeveval to insert/update function index above.
+ */
+
+class tx_openid_eID {
+	/**
+	 * Processes eID request.
+	 *
+	 * @return	void
+	 */
+	public function main() {
+		// Due to the nature of OpenID (redrections, etc) we need to force user
+		// session fetching is there is no session around. This ensures that
+		// our service is called even if there no login data in the request.
+		// Inside the service we will process OpenID response and authenticate
+		// the user.
+		$GLOBALS['TYPO3_CONF_VARS']['SVCONF']['auth']['FE_fetchUserIfNoSession'] = true;
+
+		// Initialize Frontend user
+		tslib_eidtools::connectDB();
+		tslib_eidtools::initFeUser();
+
+		// Redirect to the original location in any case (authenticated or not)
+		header(t3lib_div::HTTP_STATUS_304);
+		header('Location: ' . t3lib_div::locationHeaderUrl(t3lib_div::GPvar('tx_openid_location')));
+	}
+}
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/openid/class.tx_openid_eid.php'])	{
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/openid/class.tx_openid_eid.php']);
+}
+
+$module = t3lib_div::makeInstance('tx_openid_eID');
+/* @var tx_openid_eID $module */
+$module->main();
+
+?>
