@@ -92,13 +92,23 @@ class tx_openid_sv1 extends t3lib_svbase {
 	}
 
 	/**
-	 * This function returns authenticated user record back to the t3lib_userAuth.
-	 * If user is not authenticated, it returns null.
+	 * This function returns user record back to the t3lib_userAuth. it does not
+	 * mean that user is authenticated, it means only that user is found. This
+	 * function makes sure that user cannot be authenticated by any other service
+	 * if user tries to use OpenID to authenticate.
 	 *
 	 * @return	mixed	User record (content of fe_users/be_users as appropriate for the current mode)
 	 */
 	public function getUser() {
-		return $this->fetchUserRecord();
+		$userRecord = $this->fetchUserRecord();
+		// The above function will return user record from the OpenID. It means that
+		// user actually tried to authenticate using his OpenID. In this case
+		// we must change the password in the record to a long random string so
+		// that this user cannot be authenticated with other service.
+		if (is_array($userRecord)) {
+			$userRecord[$this->authInfo['db_user']['userident_column']] = uniqid($this->prefixId . chr(10), true);
+		}
+		return $userRecord;
 	}
 
 	/**
@@ -148,8 +158,9 @@ class tx_openid_sv1 extends t3lib_svbase {
 						$oldIncludePath);
 		require_once($phpOpenIDLibPath . '/Auth/OpenID/Consumer.php');
 		require_once($phpOpenIDLibPath . '/Auth/OpenID/FileStore.php');
-		require_once($phpOpenIDLibPath . '/Auth/OpenID/SReg.php');
-		require_once($phpOpenIDLibPath . '/Auth/OpenID/PAPE.php');
+		//require_once($phpOpenIDLibPath . '/Auth/OpenID/SReg.php');
+		//require_once($phpOpenIDLibPath . '/Auth/OpenID/PAPE.php');
+
 		// Restore path
 		@set_include_path($oldIncludePath);
 	}
@@ -192,7 +203,8 @@ class tx_openid_sv1 extends t3lib_svbase {
 	 */
 	protected function getOpenIDConsumer() {
 		// TODO Change this to a TYPO3-specific database-based store! Add a class
-		// for it. File-based store is ineffective and insecure.
+		// for it. File-based store is ineffective and insecure. After changing
+		// get rid of the FileStore include in includePHPOpenIDLibrary()
 		$openIDStorePath = PATH_site . 'typo3temp/tx_openid';
 		$openIDStore = new Auth_OpenID_FileStore($openIDStorePath);
 		return new Auth_OpenID_Consumer($openIDStore);
@@ -250,7 +262,6 @@ class tx_openid_sv1 extends t3lib_svbase {
 			@ob_end_clean();
 			header(t3lib_div::HTTP_STATUS_303);
 			header('Location: ' . $redirectURL);
-			exit;
 		}
 		else {
 			$formHtml = $authenticationRequest->htmlMarkup($extensionWebPath,
@@ -265,17 +276,30 @@ class tx_openid_sv1 extends t3lib_svbase {
 			} else {
 				@ob_end_clean();
 				echo $formHtml;
-				exit;
 			}
 		}
+		// If we reached this point, we must not return!
+		exit;
 	}
 
 	/**
-	 *
+	 * Creates return URL for the OpenID server. When a user is authenticated by
+	 * the OpenID server, the user will be sent to this URL to complete
+	 * authentication process with the current site. We send it to our script.
 	 */
 	protected function getReturnURL($extenstionWebPath) {
-		$returnURL = $extenstionWebPath . 'class.tx_openid_return.php?';
-		return $returnURL;
+		if ($this->authInfo['loginType'] == 'FE') {
+			// We will use eID to send user back, create session data and
+			// return to the calling page
+			$returnURL = 'index.php?eID=tx_openid&';
+		}
+		else {
+			// In the Backend we will use dedicated script to create session.
+			// It is much easier for the Backend to manage users.
+			$returnURL = $extenstionWebPath . 'class.tx_openid_return.php?';
+		}
+		$returnURL .= 'tx_openid_location=' . rawurlencode($requestURL);
+		return t3lib_div::locationHeaderUrl($returnURL);
 	}
 }
 
