@@ -12,6 +12,7 @@
 	* Added PHP OpenID library to the service code. Updated service class to match service type
 	* Added code to connect to the OpenID server and request authentication
 	* Fixed problem: default TYPO3 service (tx_sv_auth) prevented OpenID authentication
+	* Added eID and Backend return scripts
 
 2008-09-24  Ingo Renner  <ingo@typo3.org>
 
